# easy-orders-app

./: pyproject.toml
order_app/: app.py
order_app/data/: client_and_quantity.json  orders.json
order_app/data_loader/: orders_loader.py
order_app/order/: model.py  service.py  validator.py
order_app/order/customer/: model.py
order_app/order/product/: model.py
order_app/validator/: text.py
orders_app/data/: orders.json
tests/test_data_loader/: test_orders_loader.py
tests/test_data_loader/test_json/: test_json_service.py
tests/test_order/: test_model.py  test_service.py
tests/test_validator/: test_text.py
